Adiciona banco de dados, refatora arquivos e testes unitarios
